--- a/anim.html
+++ b/anim.html
@@ -32,7 +32,7 @@
                     <h2>Houston Championships FedEx Challenge</h2>
                     <div style="height: 1em;"></div>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/uFmzfNvx20o" frameborder="0" allowfullscreen></iframe>
-                    <p style="max-width: 40em;"> I was tasked with creating a 30 second animation that summarized Grace Hopper's Contribution to Computer Science and Engineering. It was written, illustrated, and animated in 1 day by myself and one other person.</p>
+                    <p style="max-width: 40em;"> In a competition given by FedEx between FRC teams at the 2017 Houston Championships for a $5,000 grant, I was tasked with creating a 30 second animation that summarized Grace Hopper's Contribution to Computer Science and Engineering. It was written, illustrated, and animated in 1 day by myself and one other person.</p>
                     
                     <div style="height: 5em;"></div>
                     
